--- a/_styles/style.css
+++ b/_styles/style.css
@@ -2,18 +2,45 @@ html,body{
 	
 	margin: 0;
 	padding: 0;
-	
-	
+	font-family: sans-serif;
 	line-height: 1.2em;
 }
 
+ul{
+	padding: 0;
+	margin: 0;
+	clear: both;
+}
+
+.ul-v__li{
+	
+	margin: 0;
+	float: left;
+	width: 50%;
+	height: 100%
+
+
+}
+
+.ul-v__li--a{
+	display: block;
+	text-align: center;
+}
+
+
 header{
+
 	background: red;
 	height: 300px;
 	position: relative;
 }
 
-.center{
+footer{
+	height: 50px;
+	background: green;
+}
+
+/*.center{
 
 	position: absolute;
 	top: 50%;
@@ -24,4 +51,4 @@ header{
 	display: block;
 
 
-}
+}*/
