--- a/_styles/style.css
+++ b/_styles/style.css
@@ -6,6 +6,18 @@ html,body{
 	line-height: 1.2em;
 }
 
+
+.container{
+    width: 320px;
+    height: 480px;
+    font-family: sans-serif;
+    margin: 0 auto;
+    position: relative;
+    overflow: hidden;
+    background: #eee;
+}
+
+
 ul{
 	padding: 0;
 	margin: 0;
@@ -14,33 +26,40 @@ ul{
 
 .ul-v__li{
 	
-	margin: 0;
-	padding: 0;
-
-	float: left;
-	width: 50%;
-	height: 100%;
-	list-style: none;
+  list-style: none;
+    float: left;
+    width: 50%;
+	
 
 
 }
 
-.ul-v__li--a{
-	display: block;
-	text-align: center;
+.ul-v__li--label{
+	
+
+    display: block;
+    text-decoration: none;
+    cursor: pointer;
+    text-transform: uppercase;
+    color: white;
+    text-align: center;
+    background: #ddd;
+}
+
+.ul-v__li--label:hover{
+ background: pink;
 }
 
 
-header{
 
-	background: red;
-	height: 300px;
-	position: relative;
-}
-
-footer{
-	height: 50px;
-	background: green;
+footer,header{
+	height: 40px;
+    padding: 5px;
+    background: #bbb;
+    clear: both;
+    line-height: 40px;
+    font-size: 20px;
+    z-index: 99999999;
 }
 
 /*.center{
