--- a/_styles/style.css
+++ b/_styles/style.css
@@ -52,7 +52,7 @@ ul{
 
 
 
-footer,header{
+.footer,.header{
 	height: 40px;
     padding: 5px;
     background: #bbb;
@@ -62,6 +62,12 @@ footer,header{
     z-index: 99999999;
 }
 
+.main{
+height:370px;
+width: 310px;
+padding: 5px;
+display: block;
+}
 /*.center{
 
 	position: absolute;
