--- a/_styles/style.css
+++ b/_styles/style.css
@@ -41,6 +41,19 @@ header{
     right:0;
     position:absolute;
 }
+.header__nav__ul {
+    list-style:none;
+    float:left;
+}
+
+.header__p {
+    margin:0;
+    padding:0;
+    color:white;
+    float:left;
+    width:50%;
+    text-align:center;
+}
 
 footer{
 	height: 50px;
