--- a/_styles/style.css
+++ b/_styles/style.css
@@ -34,18 +34,6 @@ header{
 	position: relative;
 }
 
-.header__nav {
-    width:50%;
-    height:100%;
-    background-color:#BADA55;
-    right:0;
-    position:absolute;
-}
-.header__nav__ul {
-    list-style:none;
-    float:left;
-}
-
 .header__p {
     margin:0;
     padding:0;
@@ -53,7 +41,24 @@ header{
     float:left;
     width:50%;
     text-align:center;
+    padding-top:25px;
+    font-size:30px;
 }
+
+.header__nav {
+    width:50%;
+    height:100%;
+    background-color:#BADA55;
+    right:0;
+    position:absolute;
+}
+
+.header__nav__ul {
+    list-style:none;
+    float:left;
+}
+
+
 
 footer{
 	height: 50px;
