--- a/_styles/style.css
+++ b/_styles/style.css
@@ -8,19 +8,15 @@ html,body{
 
 
 .container{
-    width: 320px;
-    height: 480px;
-    font-family: sans-serif;
-    margin: 0 auto;
-    position: relative;
-    overflow: hidden;
-    background: #eee;
+position: absolute;
+top: 50px;
+left: 0;
+right: 0;
+bottom: 0;
+overflow: scroll;
+-webkit-overflow-scrolling: touch;
 }
 
-.main__cat{
- overflow-y:scroll; 
-  height: 450px;
-}
 
 .main__filtre{
 height: 30px;
@@ -97,6 +93,7 @@ text-align: center;
 
 
 .footer,.header{
+	position: fixed;
 	height: 70px;
     background: #bbb;
     clear: both;
@@ -105,8 +102,12 @@ text-align: center;
     z-index: 99999999;
 }
 
+.header{
+	height: 50px;
+	width: 100%;
+}
+
 .footer{
-	position: fixed;
 	bottom: 0;
 	width: 100%;
 }
