--- a/_styles/style.css
+++ b/_styles/style.css
@@ -7,15 +7,16 @@ html,body{
 }
 
 
-.page_profil,.page_group{
+.page_profil,.page_group,.page_search{
 position: fixed;
 background: blue;
 top: 50px;
 left: 0;
 right: 0;
 bottom: 0;
-height: 100%;
+height: 360px;
 width: 100%;
+z-index:9999999;
 
 }
 
@@ -25,6 +26,21 @@ width: 100%;
   top:50px;
   position:fixed;
   width:100%;
+}
+
+.page_search{
+  background: red;
+ -webkit-transform: translateX(-100%);
+     -moz-transform: translateX(-100%);
+      -ms-transform: translateX(-100%);
+       -o-transform: translateX(-100%);
+          transform: translateX(-100%);
+  -webkit-transition: -webkit-transform .4s ease-in; /* Changed here */ 
+     -moz-transition: -moz-transform .4s ease-in;
+       -o-transition: -o-transform .4s ease-in;
+          transition: transform .4s ease-in;
+
+
 }
 
 .page_profil{
@@ -43,9 +59,6 @@ background: green;
 }
 
 .page_group{
-
-
-
 background: orange;
   -webkit-transform: translateX(100%);
      -moz-transform: translateX(100%);
