--- a/_styles/style.css
+++ b/_styles/style.css
@@ -21,7 +21,8 @@ z-index:9999999;
 }
 
 .container{
-	overflow-x: scroll;
+  overflow-y: scroll;
+	overflow-x: hidden;
 	height:350px;
   top:50px;
   position:fixed;
