--- a/_styles/style.css
+++ b/_styles/style.css
@@ -7,7 +7,7 @@ html,body{
 }
 
 
-.page_profil,.page_group,{
+.page_profil,.page_group{
 position: fixed;
 background: blue;
 top: 50px;
@@ -16,7 +16,7 @@ right: 0;
 bottom: 0;
 height: 380px;
 width: 100%;
-z-index:99999999999999;
+z-index:999999999999999999999;
 }
 
 
