--- a/_styles/style.css
+++ b/_styles/style.css
@@ -31,11 +31,11 @@ z-index:999999999999999999999;
 
 .page_search{
   background: red;
- -webkit-transform: translateY(-100%);
-     -moz-transform: translateY(-100%);
-      -ms-transform: translateY(-100%);
-       -o-transform: translateY(-100%);
-          transform: translateY(-100%);
+ -webkit-transform: scale(0,0);
+     -moz-transform: scale(0,0);
+      -ms-transform: scale(0,0);
+       -o-transform: scale(0,0);
+          transform: scale(0,0);
   -webkit-transition: -webkit-transform .4s ease-in; /* Changed here */ 
      -moz-transition: -moz-transform .4s ease-in;
        -o-transition: -o-transform .4s ease-in;
@@ -238,11 +238,11 @@ input {
 }
 
 #searchT:checked~.page_search{
-  -webkit-transform: translateY(0);
-     -moz-transform: translateY(0);
-      -ms-transform: translateY(0);
-       -o-transform: translateY(0);
-          transform: translateY(0);
+  -webkit-transform: scale(1,1);
+     -moz-transform: scale(1,1);
+      -ms-transform: scale(1,1);
+       -o-transform: scale(1,1);
+          transform: scale(1,1);
   -webkit-transition: -webkit-transform .4s ease-in; /* Changed here */ 
      -moz-transition: -moz-transform .4s ease-in;
        -o-transition: -o-transform .4s ease-in;
