--- a/_styles/style.css
+++ b/_styles/style.css
@@ -33,9 +33,18 @@ z-index:999999999999999999999;
 }
 
 .page_login{
+
   top: 0;
 height: 480px;
 
+}
+.logo__a{
+
+  text-align: center;
+  display: block;
+ 
+  padding: 2.5%;
+  background: pink;
 }
 .logo__form{
 
@@ -43,7 +52,7 @@ margin-top: 25%;
 }
 
 .form__div{
-  padding: 2.5%;
+  padding: 5%;
   margin: 0 auto;
   position: relative;
 }
@@ -59,7 +68,7 @@ padding: 5%;
 
 .logo__small{
 text-align: center;
-width: 100%;
+margin: 0 auto;
 display: block;
 
 }
