--- a/_styles/style.css
+++ b/_styles/style.css
@@ -317,7 +317,35 @@ input[type="submit"]{
 
 }
 
+.arrow{
+content: "";
+position: absolute;
+right: 15px;
+top: 15px;
+width: 0;
+height: 0;
+border-style: solid;
+border-width: 20px 20px 0 20px;
+border-color: #007bff transparent transparent transparent;
+-webkit-transform: rotate(180deg);
+transition: all .6s;
 
+
+}
+
+.arrow_active{
+-webkit-transform: rotate(0deg);
+transition: all .6s;
+
+}
+
+.info{
+  height: 100px;
+}
+
+.a{
+  position: relative;
+}
 /*.center{
 
 	position: absolute;
