--- a/_styles/style.css
+++ b/_styles/style.css
@@ -348,6 +348,67 @@ transition: all .6s;
 .a{
   position: relative;
 }
+
+/*select*/
+
+.selectContainer {
+    width:80%;
+    height:40%;
+    background-color:#BADA55;
+    position:absolute;
+    left:50%;
+    top:50%;
+    margin-left:-40%;
+    margin-top:-25%;
+    overflow:hidden;
+}
+
+button {
+    position:absolute;
+    width:100%;
+    height:50px;
+    background-color:#663399;
+    border:none;
+}
+
+.arrowUp {
+  width: 0; 
+  height: 0; 
+    left:50%;
+    margin-left: -7.5px;
+    position:absolute;
+  border-left: 15px solid transparent;
+  border-right: 15px solid transparent;
+  
+  border-bottom: 15px solid black;
+}
+.arrowDown {
+  width: 0; 
+  height: 0; 
+    left:50%;
+    margin-left: -7.5px;
+    position:absolute;
+  border-left: 15px solid transparent;
+  border-right: 15px solid transparent;
+  
+  border-top: 15px solid black;
+}
+
+.selectDown {
+    bottom:0;
+}
+
+.group {
+    height:50px;
+    width:100%;
+    background-color:#CCCCCC;
+    border: 1px black solid;
+    text-align:center;
+}
+.allGroups {
+    margin-top:50px;
+}
+
 /*.center{
 
 	position: absolute;
