--- a/_styles/style.css
+++ b/_styles/style.css
@@ -421,3 +421,26 @@ button {
 
 
 }*/
+
+
+.search__year {
+    width:250px;
+    height:50px;
+    margin:0 auto;
+    display:block;
+    position:relative;
+    background-color:#BADA55;
+    clear:both;
+}
+
+.search__arrowBox {
+    float:right;
+    background-color:#663399;
+    height:100%;
+    width:75px;
+}
+
+.search__arrowUp, .search__arrowDown {
+    color:black;
+    display:block;
+}
